--- a/public_html/login/login.html
+++ b/public_html/login/login.html
@@ -9,16 +9,16 @@
         <script src="login.js"></script>
     </head>
     <body>
-        <!-- <header class='header'></header> -->
-        <!-- <form class="content"> -->
-            <!-- <input class='entry_fld_inp' Placeholder='Логин'></input> -->
-            <!-- <input class='entry_fld_inp' Placeholder='Пароль'></input> -->
-            <!-- <button class='entry_fld_bt'>Войти</button> -->
-            <!-- <button class='entry_fld_bt'>Зарегестрироваться</button> -->
+        <header class='header'></header> 
+       <form class="content"> -->
+           <input class='entry_fld_inp' Placeholder='Логин'></input>
+            <input class='entry_fld_inp' Placeholder='Пароль'></input>
+            <button class='entry_fld_bt'>Войти</button>
+            <button class='entry_fld_bt'>Зарегестрироваться</button>
             <!-- <script src=numb.js> -->
                 <!-- elem(); -->
             <!-- </script> -->
-        <!-- </form> -->
-        <!-- <footer class="footer"></footer>  -->
+       </form>
+        <footer class="footer"></footer>
     </body>
 </html>
